// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListItem/> snapshot - hover 1`] = `
<li
  className="ss-over-item"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  <a>
    fructuary
  </a>
</li>
`;

exports[`<ListItem/> snapshot 1`] = `
<li
  className={undefined}
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  <a>
    fructuary
  </a>
</li>
`;
